--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "rgssad"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["lux.r.ck <lux.r.ck@gmail.com>"]
 
 [dependencies]
+regex = "*"
